lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:6: error: value update is not a member of object Array
  			Array(0)=Point(Liste(i).x,Liste(i).y)
                        ^Lander:7: error: value update is not a member of object Array
  			Array(1)=Point(Liste(i+1).x,Liste(i+1).y)
                        ^