lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.code
  override def initialize():Array[Point] ={
  	val Liste=getSol()
  	var plat:Array[Point]= new Array(2)
  	for (i <- 0 to Liste.length-1) {
  		if (Liste(i).y==Liste(i+1).y) {
  			Array(0)=Point(Liste(i).x,Liste(i).y)
  			Array(1)=Point(Liste(i+1).x,Liste(i+1).y)
  		}
  	}
  	return plat
  }

  override def step() {
  }
